# chengeta-ai

./: .gitignore  .pre-commit-config.yaml  BRAND_GUIDELINES.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COOKBOOK.md  Dockerfile  LICENSE  MANIFEST.in  MIGRATION.md  PUBLISHING.md  README.md  ROADMAP.md  main.py  mkdocs.yml  pyproject.toml
.github/: REPO_METADATA.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
assets/brand/: README.md
benchmarks/: bench_cache_latency.py
chengeta_ai/: __init__.py  __main__.py
chengeta_ai/adapters/: __init__.py  a2a_adapter.py  agno_adapter.py  anthropic_adapter.py  autogen_adapter.py  claude_agent_adapter.py  crewai_adapter.py  gemini_adapter.py  google_adk_adapter.py  langchain_adapter.py  langgraph_adapter.py  llamaindex_adapter.py  mistral_adapter.py  openai_adapter.py  openai_agents_adapter.py
chengeta_ai/backends/: __init__.py  async_base.py  async_memory_backend.py  base.py  disk_backend.py  memory_backend.py  pinecone_backend.py  redis_backend.py  tiered_backend.py  vector_backend.py
chengeta_ai/config/: __init__.py  settings.py
chengeta_ai/core/: __init__.py  cache_manager.py  compressor.py  exporters.py  invalidation.py  key_builder.py  metrics.py  policies.py  request_config.py  serializer.py  stampede.py  warmer.py
chengeta_ai/layers/: __init__.py  adaptive_semantic_cache.py  context_cache.py  embedding_cache.py  prompt_cache.py  response_cache.py  retrieval_cache.py  semantic_cache.py  streaming_cache.py
chengeta_ai/middleware/: __init__.py  embedding_middleware.py  llm_middleware.py  retriever_middleware.py
conda-recipe/: meta.yaml
cookbook/: README.md  __init__.py  run_all.py
cookbook/a2a/: README.md  __init__.py  agent.py
cookbook/agno/: README.md  __init__.py  agent.py
cookbook/autogen/: README.md  __init__.py  agent.py
cookbook/core/: README.md  __init__.py  agent.py
cookbook/crewai/: README.md  __init__.py  agent.py
cookbook/google_adk/: agent.py
cookbook/invalidation/: README.md  __init__.py  agent.py
cookbook/langchain/: README.md  __init__.py  agent.py
cookbook/langgraph/: README.md  __init__.py  agent.py
cookbook/metrics/: agent.py
cookbook/multi_framework/: README.md  __init__.py  agent.py
cookbook/openai_agents/: agent.py
cookbook/prompt_cache/: agent.py
cookbook/redis/: README.md  __init__.py  agent.py
cookbook/semantic_cache/: README.md  __init__.py  agent.py
cookbook/tiered_backend/: agent.py
cookbook/ttl/: README.md  __init__.py  agent.py
docs/: index.md  migration-from-gptcache.md
docs/adapters/: a2a.md  agno.md  anthropic.md  autogen.md  claude-agent.md  crewai.md  gemini.md  google-adk.md  index.md  langchain.md  langgraph.md  llamaindex.md  mistral.md  openai-agents.md  openai.md
docs/api-reference/: index.md
docs/backends/: async-memory.md  chroma.md  disk.md  faiss.md  index.md  memory.md  pinecone.md  qdrant.md  redis.md  tiered.md  weaviate.md
docs/cookbook/: a2a.md  agno.md  autogen.md  core.md  crewai.md  index.md  invalidation.md  langchain.md  langgraph.md  multi-framework.md  redis.md  runnable-examples.md  semantic-cache.md  ttl.md
docs/core/: cache-manager.md  index.md  invalidation.md  key-builder.md  policies.md  settings.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/layers/: adaptive-semantic.md  context.md  embedding.md  index.md  prompt-cache.md  response.md  retrieval.md  semantic.md  streaming-response.md
docs/middleware/: embedding.md  index.md  llm.md  retriever.md
docs/stylesheets/: extra.css
examples/rag-ollama/: .env.example  README.md  main.py  pyproject.toml
examples/rag-ollama/data/: docs.txt
examples/rag-ollama/rag/: __init__.py  cache.py  embedder.py  generator.py  indexer.py  pipeline.py
tests/: conftest.py  test_cli.py
tests/adapters/: test_a2a_adapter.py  test_agno_adapter.py  test_anthropic_adapter.py  test_autogen_adapter.py  test_claude_agent_adapter.py  (+9 more)
website/: .gitignore  convert-docs.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tailwind.config.js
(+109 files in other folders)
