[project]
name = "chengeta-ai"
version = "0.3.0"
description = "Persistent memory and caching infrastructure for AI agents, workflows, and autonomous systems"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Chengeta AI" },
]
keywords = [
    "agent-memory", "ai-memory", "memory-layer", "vector-cache", "llm-cache",
    "ai-infrastructure", "cache", "caching", "llm", "ai", "agent", "langchain",
    "langgraph", "autogen", "crewai", "agno", "a2a", "semantic-cache", "embeddings",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
dependencies = [
    "diskcache>=5.6",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/vigilancetrent/chengeta-ai"
Documentation = "https://github.com/vigilancetrent/chengeta-ai#readme"
Repository = "https://github.com/vigilancetrent/chengeta-ai"
Issues = "https://github.com/vigilancetrent/chengeta-ai/issues"
Changelog = "https://github.com/vigilancetrent/chengeta-ai/blob/main/CHANGELOG.md"

[project.optional-dependencies]
redis = ["redis>=5.0"]
vector-faiss = ["faiss-cpu>=1.7", "numpy>=1.26"]
vector-chroma = ["chromadb>=0.4"]
langchain = ["langchain-core>=0.2"]
langgraph = ["langgraph>=0.1", "langchain-core>=0.2"]
autogen = ["autogen-agentchat>=0.4", "autogen-ext[openai]>=0.4"]
crewai = ["crewai>=0.28", "litellm>=1.0"]
agno = ["agno>=0.1"]
a2a = ["a2a-sdk>=0.3"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
google-adk = ["google-adk>=0.1"]
llamaindex = ["llama-index-core>=0.10"]
vector-qdrant = ["qdrant-client>=1.7"]
vector-weaviate = ["weaviate-client>=4.0"]
vector-pinecone = ["pinecone-client>=3.0"]
mistral = ["mistralai>=1.0"]
gemini = ["google-generativeai>=0.5"]
observability = ["prometheus-client>=0.20", "opentelemetry-sdk>=1.20", "opentelemetry-exporter-otlp-proto-grpc>=1.20"]
all = [
    "chengeta-ai[redis,vector-faiss,vector-chroma,vector-qdrant,vector-pinecone,langchain,langgraph,autogen,crewai,agno,a2a,openai,anthropic,mistral,gemini,google-adk,llamaindex,observability]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[project.scripts]
chengeta = "chengeta_ai.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chengeta_ai"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"cookbook/**" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=chengeta_ai --cov-fail-under=70"
python_files = ["test_*.py", "bench_*.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "mkdocs-material>=9.7.6",
    "mkdocs-minify-plugin>=0.8.0",
    "pre-commit>=3.7",
    "pytest-benchmark>=5.2.3",
]
