[project]
name = "rag-openrouter"
version = "0.1.0"
description = "RAG with OpenRouter LLM + Ollama embeddings + Chengeta AI"
requires-python = ">=3.12"
dependencies = [
    "chengeta-ai[vector-faiss]",
    "openai>=1.0",        # OpenRouter LLM (OpenAI-compatible)
    "requests>=2.31",     # Ollama embeddings API
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]
